[JBWS-4148]:Upgrade to Apache CXF 3.3.1 (#100)
* [JBWS-4148]:Upgrade to Apache CXF 3.3.1

* Add exclusion for jaxb impl dependency

* Add jdk9 plus profile

* Fix enforcer and compliation failure

* Travis build with openjdk8

* Improve jdk11 profile

* Fix jdk11 dependency