@@ -75,9 +75,9 @@
     <wildfly1600.version>16.0.0.Final</wildfly1600.version>
     <wildfly1700.version>17.0.0.Beta1-SNAPSHOT</wildfly1700.version>
     <ejb.api.version>1.0.1.Final</ejb.api.version>
-    <cxf.version>3.2.6</cxf.version>
-    <cxf.asm.version>6.2.1</cxf.asm.version>
-    <cxf.xjcplugins.version>3.2.2</cxf.xjcplugins.version>
+    <cxf.version>3.3.1</cxf.version>
+    <cxf.asm.version>7.1</cxf.asm.version>
+    <cxf.xjcplugins.version>3.3.0</cxf.xjcplugins.version>
     <jboss-logging.version>3.3.2.Final</jboss-logging.version>
     <jboss-logging-annotations.version>2.1.0.Final</jboss-logging-annotations.version>
     <jboss-logging-processor.version>2.1.0.Final</jboss-logging-processor.version>
@@ -472,8 +472,8 @@
         <version>${cxf.xjcplugins.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>javax.annotation</groupId>
@@ -491,8 +491,8 @@
         <version>${cxf.xjcplugins.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>javax.annotation</groupId>
@@ -510,8 +510,8 @@
         <version>${cxf.xjcplugins.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>javax.annotation</groupId>
@@ -529,8 +529,8 @@
         <version>${cxf.xjcplugins.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>javax.annotation</groupId>
@@ -548,8 +548,8 @@
         <version>${cxf.xjcplugins.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>javax.annotation</groupId>
@@ -843,6 +843,10 @@
           <exclusion>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -1163,37 +1167,10 @@
          <module>modules/testsuite</module>
       </modules>
     </profile>
-
     <profile>
-      <id>JDK9</id>
+      <id>JDK11plus</id>
       <activation>
-        <jdk>9</jdk>
-      </activation>
-      <properties>
-        <modular.jdk.args>
-          --add-modules=java.se
-        </modular.jdk.args>
-        <modular.jdk.props>
-          -Dsun.util.logging.disableCallerCheck=true
-          -Dsun.reflect.debugModuleAccessChecks=true
-          --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-          --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
-          --add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
-          --add-exports=java.security.sasl/com.sun.security.sasl.ntlm=ALL-UNNAMED
-          --add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED
-          --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
-          --add-exports=java.xml/com.sun.org.apache.xpath.internal.jaxp=ALL-UNNAMED
-          --add-exports=java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
-          --add-exports=java.xml/javax.xml.namespace=ALL-UNNAMED
-        </modular.jdk.props>
-        <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
-      </properties>
-    </profile>
-
-    <profile>
-      <id>JDK10plus</id>
-      <activation>
-        <jdk>[10,)</jdk>
+        <jdk>[11,)</jdk>
       </activation>
       <properties>
         <modular.jdk.args>
@@ -1201,10 +1178,45 @@
         </modular.jdk.args>
         <modular.jdk.props>
         </modular.jdk.props>
+        <skip-enforce>true</skip-enforce>
         <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
       </properties>
+        <dependencies>
+          <!--cxf force add these dependency in a java9-plus profile in cxf 3.3.x parent pom. There is no way to exclude these dependency gloabally.Set it to test scope is a workaround to avoid 
+            add these dependencies to dist and jboss modules-->
+          <!-- ALIGN THESE VERSION NUMBER TO CXF 3.3.X--> 
+          <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.0</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-ws-metadata_2.0_spec</artifactId>
+            <version>1.1.3</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+           <groupId>org.apache.geronimo.specs</groupId>
+           <artifactId>geronimo-jta_1.1_spec</artifactId>
+           <version>1.1.1</version>
+           <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.jboss.spec.javax.rmi</groupId>
+            <artifactId>jboss-rmi-api_1.0_spec</artifactId>
+            <version>1.0.6.Final</version>
+            <scope>test</scope>
+          </dependency>
+        </dependencies>
     </profile>
-
     <!-- [JBWS-3666] -->
     <profile>
       <id>eclipse-m2e</id>
